--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: monospace, sans-serif;
-    font-size: 0.5rem;
+    font-size: 1rem;
     transition: background-color 0.3s;
 }
 
@@ -136,8 +136,8 @@ input {
 
 /* FLIP BOOK */
 #flip_book {
-    width: 298px;
-    height: 420px;
+    width: 450px; /* base width */
+    height: 650px; /* base height */
     position: relative;
     transition-duration: 1s;
     perspective: 2000px;
@@ -152,7 +152,7 @@ input {
     justify-content: center;
     align-items: center;
     border-radius: 2.5px 5px 5px 2.5px;
-    background-image: url(./assets/images/flip_book_edge_shading.webp);
+    /* background-image: url(./assets/images/flip_book_edge_shading.webp); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -177,43 +177,33 @@ input {
 }
 
 .page {
-    width: 288px;
-    height: 400px;
+    width: calc(100% - 10px);   /* 30px less than flip_book width to create margin */
+    height: calc(100% - 10px);  /* 20px less than flip_book height for top/left margins */
     position: absolute;
     top: 10px;
-    left: 1px;
+    left: 15px;
     border-radius: 0 5px 5px 0;
-    background-color: white;
+    background-color: black;
     transform-origin: left;
     transform-style: preserve-3d;
     transform: rotateY(0deg);
     transition-duration: 0.5s;
 }
 
-.front_page {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-}
-
-.front_page label {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    cursor: pointer;
-    z-index: 100;
-}
-
+.front_page,
 .back_page {
     width: 100%;
     height: 100%;
     position: absolute;
     backface-visibility: hidden;
+}
+
+.back_page {
     transform: rotateY(180deg);
     z-index: 100;
 }
 
+.front_page label,
 .back_page label {
     width: 100%;
     height: 100%;
@@ -222,43 +212,36 @@ input {
     z-index: 100;
 }
 
-.edge_shading {
-    width: 288px;
-    height: 400px;
-    position: absolute;
-    z-index: 98;
-}
 
-.front_content {
-    width: 287px;
-    height: 398px;
+.front_content,
+.back_content {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 1px;
-    border-radius: 0 5px 5px 0;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
     z-index: 97;
 }
 
 .back_content {
-    width: 287px;
-    height: 398px;
-    position: absolute;
-    top: 1px;
-    left: 1px;
     border-radius: 5px 0 0 5px;
-    z-index: 97;
 }
 
 
 .back_cover {
+    width: 100%;
+    height: 100%;
     position: relative;
     z-index: -1;
+    border-radius: 2.5px 5px 5px 2.5px;
 }
 
-.cover_image{
+.cover_image{ 
     width:100%;
     height: 100%;
     object-fit:cover;
-    border-radius: 2.5px 5px 5px 2.5px;
+    border-radius: inherit;
     z-index: 98;
     position: absolute;
 }
@@ -299,7 +282,7 @@ input {
 }
 
 #cover_checkbox:checked~#flip_book {
-    transform: translateX(144px)
+    transform: translateX(225px); /* half width for smooth opening */
 }
 
 #cover_checkbox:checked~#flip_book .front_cover {
